--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
       rel="stylesheet"
       href="https://bootswatch.com/5/yeti/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="index.css">
   </head>
 
-  <body class="bg-dark">
+  <body class="">
     <!-- ADD TASK -->
-    <div class="container p-4">
+    <div class="container p-4" id="content">
       <div class="row">
         <div class="col-md-6">
           <div class="card">
             <div class="card-body">
-              <h1 class="h4">Add Task</h1>
+              <h1 class="h4 title-card">Add Task</h1>
 
               <form id="task-form">
                 <label for="title">Title:</label>
@@ -31,7 +32,7 @@
                   placeholder="Task Title"
                   autofocus
                 />
-
+                
                 <label for="description">Description:</label>
                 <textarea
                   id="task-description"
@@ -40,7 +41,7 @@
                   placeholder="Task Description"
                 ></textarea>
 
-                <button class="btn btn-primary" id="btn-task-form">Save</button>
+                <button class="btn btn-primary btn-save" id="btn-task-form">Save</button>
               </form>
             </div>
           </div>
